Changed mailto address.

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -38,7 +38,7 @@
                 {% if tags|length > 1 %}
                     <li>:: <a href="{{ SITEURL }}/tags.html">tags</a></li>
                 {% endif %}
-                    <li>:: <a href="mailto:j@jimperio.com">email</a></li>
+                    <li>:: <a href="mailto:jimperio@gmail.com">email</a></li>
                 </ul>
             </nav>
         </footer>
